# compression-suite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: compress-image.md  reduce-jpeg-size.md
scripts/: compress-images-of-folder.sh
src/compression_suite/: __init__.py  cli.py
src/compression_suite/compress_image/: __init__.py  cli.py  main.py  test_main.py
src/compression_suite/extract_unique_frames/: cli.py  main.py
src/compression_suite/models/: metadata.py
src/compression_suite/optimize_slides_recording/: main.py
src/compression_suite/reassemble_video/: __init__.py  cli.py  main.py
src/compression_suite/reduce_jpeg_size/: __init__.py  cli.py  main.py  test_main.py
src/compression_suite/utils/: cli.py  dependencies.py  video.py
tests/: __init__.py
