[project]
name = "compression-suite"
version = "0.1.0"
description = "Automatically chooses the best compression and processing pipeline based on the content: video, audio, slides, or images. No expertise required!"
readme = "README.md"
authors = [
  {name = "Schrubitteflau", email = "schrubitteflau@proton.me"}
]
maintainers = [
  {name = "Schrubitteflau", email = "schrubitteflau@proton.me"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "imagehash>=4.3.2",
  "numpy>=2.2.6",
  "pillow>=12.0.0",
  "pydantic>=2.12.4",
  "rich>=13.7.0",
  "typer>=0.9.0",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/Schrubitteflau/compression_suite/issues"
changelog = "https://github.com/Schrubitteflau/compression_suite/blob/master/changelog.md"
homepage = "https://github.com/Schrubitteflau/compression_suite"

[project.scripts]
compression_suite = "compression_suite.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
